k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: production-cicd-app-service
  namespace: production
spec:
  type: NodePort

  selector:
    app: production-cicd-app

  ports:
    - port: 3000
      targetPort: 3000
